# barebones-twitch-bot

./: .env-example  .gitignore  LICENSE  Pipfile  README.md  bot.py  setup.cfg
gstone/: bot.py  commands.py  constants.py  main.py
squak/: bot.py  commands.py  constants.py  main.py
