[metadata]
name = squak-bot
summary = A Twitch bot that plays audio clips.
description-file = README.rst
author = Rishi Ramraj
classifier =
  Environment :: Console
  License :: MIT License
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8

[files]
packages =
  squak-bot

[pbr]
warnerrors = true
skip_changelog = true
skip_authors = true

[entry_points]
console_scripts =
    squak-bot = squak-bot.main:main
