[metadata]
name = squak
summary = A Twitch bot that plays audio clips.
description-file = README.md
author = Rishi Ramraj
classifier =
  Environment :: Console
  License :: MIT License
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8

[files]
packages =
  squak

[pbr]
warnerrors = true
skip_changelog = true
skip_authors = true

[entry_points]
console_scripts =
    squak=squak.main:main
